# scratchy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/scratchy/: AllRules.hpp  App.hpp  Event.hpp  Rule.hpp  RuleIterator.hpp
lib/: AllRules.cpp  App.cpp  CMakeLists.txt  Rule.cpp  RuleIterator.cpp
